--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
 
       <section id="contact" class="bg-dark text-center">
         <h2>Contact Brad</h2>
-        <form action="send_form_email.php">
+        <form action="send_form_email.php" method="post">
           <div class="form-group">
-            <label for="name">First Name:</label>
-            <input type="first_name" class="form-control" id="first_name" placeholder="Enter name" name="name">
+            <label for="first_name">First Name:</label>
+            <input type="text" class="form-control" id="first_name" placeholder="Enter name" name="first_name">
           </div>
           <div class="form-group">
-            <label for="name">Last Name:</label>
-            <input type="last_name" class="form-control" id="last_name" placeholder="Enter name" name="name">
+            <label for="last_name">Last Name:</label>
+            <input type="text" class="form-control" id="last_name" placeholder="Enter name" name="last_name">
           </div>
           <div class="form-group">
             <label for="email">Email:</label>
@@ -348,7 +348,7 @@
           </div>
           <div class="form-group">
             <label for="message">Message:</label>
-            <input type="message" class="form-control" id="message" placeholder="Enter message" name="message">
+            <input type="text" class="form-control" id="message" placeholder="Enter message" name="message">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
